--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,31 @@
 .App-link {
   color: #61dafb;
 }
+input{
+  width: 20%;
+  height: 32px;
+  border-radius: 50px;
+  margin-left: 2%;
+  text-align: center;
+}
+button:enabled{
+  background-color: blue;
+  color: white;
+  border-radius: 10px;
+  font-size: 20px;
+  padding: 3px 26px;
+}
+
+button:disabled{ 
+  border-radius: 10px;
+  font-size: 20px;
+  padding: 3px 26px;
+}
+
+body{
+  background-color: #9e9e9e;
+  padding: 50px 0;
+}
 
 @keyframes App-logo-spin {
   from {
